# WineQualityCPP

./: .gitignore  CMakeLists.txt
headers/: etl.h  linearRegression.h
src/: etl.cpp  linearRegression.cpp  main.cpp
